@@ -6,6 +6,8 @@ Version: 1.3.0 (in development)
 - Support Ubuntu 18.04 LTS.
 - Support Apple Silicon on macOS.
 - Add "REMOVE" command to move databases out of hosted folder for Claris FileMaker Server 19.3.1.
+- Update "GET SERVERPREFS" command to view the setting for sharing streaming URLs without explicit authorization when the Claris FileMaker Data API is used to request container data for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin get serverprefs AuthenticatedStream")
+- Suppress outputting error messages for debugging.
 - Add an error message for the FileMaker error code 20501.
 - Built with Go 1.16.
 
